cabal-version: 3.0
name: snmp-message
version: 0.1.0.0
license: NONE
author: Eric Demko
maintainer: edemko@layer3com.com
copyright: 2020 Eric Demko
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
      Snmp
  -- other-modules:
  -- other-extensions:
  build-depends:
    , asn1-ber-syntax
    , base >=4.14 && <4.15
    , byteslice
    , bytebuild >=0.3.9
    , contiguous >=0.6.1
    , natural-arithmetic >=0.1.2.0
    , ip >=1.7
    , primitive
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends:
    , asn1-ber-syntax
    , base >=4.12.0.0 && <5
    , byteslice
    , ip >=1.7
    , primitive
    , quickcheck-classes-base >=0.6
    , snmp-message
    , tasty >=1.2.3
    , tasty-hunit >=0.10.0.2
    , tasty-quickcheck >=0.10
